# tracepp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  event.hpp  example.json  trace.hpp  xmake.lua
examples/: CMakeLists.txt  exp_event.cpp  simple_integrated.cpp  xmake.lua
tests/: CMakeLists.txt  format_test.cpp  simple_integrated_test.cpp  test_tracer.cpp  xmake.lua
